Add my first changes.

--- a/beginner.ipynb
+++ b/beginner.ipynb
@@ -3,11 +3,10 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "view-in-github",
-        "colab_type": "text"
+        "id": "9pLQ_2-XtVuK"
       },
       "source": [
-        "<a href=\"https://colab.research.google.com/github/vorburger/LearningMachineLearning/blob/develop/beginner.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+        "This is https://www.tensorflow.org/tutorials/quickstart/beginner"
       ]
     },
     {
@@ -21,7 +20,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 28,
+      "execution_count": 57,
       "metadata": {
         "cellView": "form",
         "id": "BZSlp3DAjdYf"
@@ -111,18 +110,18 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 29,
+      "execution_count": 58,
       "metadata": {
-        "id": "0trJmd6DjqBZ",
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "47d0be39-57fd-4f2f-eb42-0820c56ba98d"
+        "id": "0trJmd6DjqBZ",
+        "outputId": "4a33473e-5693-4471-f722-b1fe2aefab07"
       },
       "outputs": [
         {
-          "output_type": "stream",
           "name": "stdout",
+          "output_type": "stream",
           "text": [
             "TensorFlow version: 2.8.0\n"
           ]
@@ -130,7 +129,9 @@
       ],
       "source": [
         "import tensorflow as tf\n",
-        "print(\"TensorFlow version:\", tf.__version__)"
+        "print(\"TensorFlow version:\", tf.__version__)\n",
+        "\n",
+        "import pandas as pd"
       ]
     },
     {
@@ -150,16 +151,44 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 30,
+      "execution_count": 59,
       "metadata": {
-        "id": "7FP5258xjs-v"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "7FP5258xjs-v",
+        "outputId": "cc54ab08-76a5-4846-b7af-c08aeda35db4"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "Shapes: x_train (60000, 28, 28) ; y_train (60000,) ; x_test (10000, 28, 28) ;  (10000,) \n",
+            "\n",
+            "Description of y_train:                   0\n",
+            "count  60000.000000\n",
+            "mean       4.453933\n",
+            "std        2.889270\n",
+            "min        0.000000\n",
+            "25%        2.000000\n",
+            "50%        4.000000\n",
+            "75%        7.000000\n",
+            "max        9.000000 \n",
+            "\n",
+            "y_train[:1] =  [5]\n"
+          ]
+        }
+      ],
       "source": [
         "mnist = tf.keras.datasets.mnist\n",
         "\n",
         "(x_train, y_train), (x_test, y_test) = mnist.load_data()\n",
-        "x_train, x_test = x_train / 255.0, x_test / 255.0"
+        "x_train, x_test = x_train / 255.0, x_test / 255.0\n",
+        "\n",
+        "print(\"Shapes: x_train\", x_train.shape, \"; y_train\", y_train.shape, \"; x_test\", x_test.shape, \"; \", y_test.shape, \"\\n\")\n",
+        "print(\"Description of y_train:\", pd.DataFrame(y_train).describe(), \"\\n\")\n",
+        "print(\"y_train[:1] = \", y_train[:1])"
       ]
     },
     {
@@ -175,7 +204,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 31,
+      "execution_count": 60,
       "metadata": {
         "id": "h3IKyzTCDNGo"
       },
@@ -200,31 +229,27 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 32,
+      "execution_count": 61,
       "metadata": {
-        "id": "OeOrNdnkEEcR",
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "0d63be57-a7ee-47fe-aae0-853d42f1b9a5"
+        "id": "OeOrNdnkEEcR",
+        "outputId": "e6ccfc44-8c78-4119-8528-fe84404110c2"
       },
       "outputs": [
         {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "array([[ 0.05818282,  0.29026896, -0.09205505,  0.02074508, -0.40365505,\n",
-              "        -0.3963831 ,  0.17241648, -0.5535098 , -0.07349157, -0.27000934]],\n",
-              "      dtype=float32)"
-            ]
-          },
-          "metadata": {},
-          "execution_count": 32
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "[[ 1.223042   -0.15541793 -0.01329105 -0.394733   -0.7688958  -0.89843255\n",
+            "  -0.52713424 -0.26359808 -0.3087973  -0.12512541]]\n"
+          ]
         }
       ],
       "source": [
         "predictions = model(x_train[:1]).numpy()\n",
-        "predictions"
+        "print(predictions)"
       ]
     },
     {
@@ -238,26 +263,26 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 33,
+      "execution_count": 62,
       "metadata": {
-        "id": "zWSRnQ0WI5eq",
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "d43ab13e-bbe2-425c-8549-a4c385e570cd"
+        "id": "zWSRnQ0WI5eq",
+        "outputId": "227cdc13-cd1e-42b6-948f-802eb9680764"
       },
       "outputs": [
         {
-          "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "array([[0.11614226, 0.1464819 , 0.09994079, 0.11187454, 0.07318408,\n",
-              "        0.07371821, 0.1301971 , 0.06299927, 0.10181336, 0.0836485 ]],\n",
+              "array([[0.34809652, 0.08770859, 0.1011037 , 0.0690413 , 0.04749108,\n",
+              "        0.04172103, 0.06047945, 0.07871547, 0.0752368 , 0.09040616]],\n",
               "      dtype=float32)"
             ]
           },
+          "execution_count": 62,
           "metadata": {},
-          "execution_count": 33
+          "output_type": "execute_result"
         }
       ],
       "source": [
@@ -284,7 +309,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 34,
+      "execution_count": 63,
       "metadata": {
         "id": "RSkzdv8MD0tT"
       },
@@ -306,24 +331,24 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 35,
+      "execution_count": 64,
       "metadata": {
-        "id": "NJWqEVrrJ7ZB",
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "f7db4f66-1945-4b1b-f684-c4a8ada556c4"
+        "id": "NJWqEVrrJ7ZB",
+        "outputId": "0f2e71df-a061-4438-c531-c047e85467db"
       },
       "outputs": [
         {
-          "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "2.6075056"
+              "3.1767502"
             ]
           },
+          "execution_count": 64,
           "metadata": {},
-          "execution_count": 35
+          "output_type": "execute_result"
         }
       ],
       "source": [
@@ -341,7 +366,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 36,
+      "execution_count": 65,
       "metadata": {
         "id": "9foNKHzTD2Vo"
       },
@@ -365,40 +390,40 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 24,
+      "execution_count": 52,
       "metadata": {
-        "id": "y7suUbJXVLqP",
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "1958ee04-6cda-4040-ed09-a976a8dc5f2d"
+        "id": "y7suUbJXVLqP",
+        "outputId": "86934ef6-57de-4739-f42d-53346f0773ba"
       },
       "outputs": [
         {
-          "output_type": "stream",
           "name": "stdout",
+          "output_type": "stream",
           "text": [
             "Epoch 1/5\n",
-            "1875/1875 [==============================] - 6s 3ms/step - loss: 0.2980 - accuracy: 0.9137\n",
+            "1875/1875 [==============================] - 5s 2ms/step - loss: 0.2904 - accuracy: 0.9158\n",
             "Epoch 2/5\n",
-            "1875/1875 [==============================] - 5s 3ms/step - loss: 0.1431 - accuracy: 0.9571\n",
+            "1875/1875 [==============================] - 4s 2ms/step - loss: 0.1407 - accuracy: 0.9586\n",
             "Epoch 3/5\n",
-            "1875/1875 [==============================] - 5s 3ms/step - loss: 0.1073 - accuracy: 0.9678\n",
+            "1875/1875 [==============================] - 4s 2ms/step - loss: 0.1045 - accuracy: 0.9685\n",
             "Epoch 4/5\n",
-            "1875/1875 [==============================] - 5s 3ms/step - loss: 0.0883 - accuracy: 0.9729\n",
+            "1875/1875 [==============================] - 4s 2ms/step - loss: 0.0865 - accuracy: 0.9735\n",
             "Epoch 5/5\n",
-            "1875/1875 [==============================] - 5s 3ms/step - loss: 0.0780 - accuracy: 0.9753\n"
+            "1875/1875 [==============================] - 4s 2ms/step - loss: 0.0737 - accuracy: 0.9772\n"
           ]
         },
         {
-          "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "<keras.callbacks.History at 0x7f1d720b0d90>"
+              "<keras.callbacks.History at 0x7f0eabf81610>"
             ]
           },
+          "execution_count": 52,
           "metadata": {},
-          "execution_count": 24
+          "output_type": "execute_result"
         }
       ],
       "source": [
@@ -416,31 +441,31 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 25,
+      "execution_count": 53,
       "metadata": {
-        "id": "F7dTAzgHDUh7",
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "c84682e8-2dd9-4012-b14d-5219da2ddbbb"
+        "id": "F7dTAzgHDUh7",
+        "outputId": "16ed2e87-6cff-4dce-f018-bb52d5bee2aa"
       },
       "outputs": [
         {
-          "output_type": "stream",
           "name": "stdout",
+          "output_type": "stream",
           "text": [
-            "313/313 - 1s - loss: 0.0715 - accuracy: 0.9774 - 554ms/epoch - 2ms/step\n"
+            "313/313 - 0s - loss: 0.0827 - accuracy: 0.9750 - 472ms/epoch - 2ms/step\n"
           ]
         },
         {
-          "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "[0.0714765265583992, 0.977400004863739]"
+              "[0.08272068202495575, 0.9750000238418579]"
             ]
           },
+          "execution_count": 53,
           "metadata": {},
-          "execution_count": 25
+          "output_type": "execute_result"
         }
       ],
       "source": [
@@ -467,7 +492,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 26,
+      "execution_count": 54,
       "metadata": {
         "id": "rYb6DrEH0GMv"
       },
@@ -481,43 +506,53 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 27,
+      "execution_count": 76,
       "metadata": {
-        "id": "cnqOZtUp1YR_",
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "93e64f1f-0eaf-48bf-8813-56280f1813de"
+        "id": "cnqOZtUp1YR_",
+        "outputId": "fb6a6bae-7746-4dff-99f9-bfdcc0c21f52"
       },
       "outputs": [
         {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "<tf.Tensor: shape=(5, 10), dtype=float32, numpy=\n",
-              "array([[1.6039209e-08, 1.2957374e-08, 2.1197568e-05, 9.1355992e-05,\n",
-              "        5.8869706e-13, 2.1889394e-07, 7.0835849e-15, 9.9988675e-01,\n",
-              "        1.2191884e-07, 3.2486679e-07],\n",
-              "       [1.4219936e-06, 1.0018284e-04, 9.9988520e-01, 1.0932128e-05,\n",
-              "        1.0535583e-15, 5.5761689e-07, 1.9756126e-07, 1.6500351e-12,\n",
-              "        1.3879818e-06, 1.4348802e-12],\n",
-              "       [3.3067994e-07, 9.9969530e-01, 4.5336652e-05, 5.9419822e-06,\n",
-              "        2.6239817e-05, 1.5365594e-06, 1.6177726e-05, 1.0406116e-04,\n",
-              "        1.0494145e-04, 1.5177825e-07],\n",
-              "       [9.9909520e-01, 3.5276018e-09, 7.9786713e-04, 2.5715227e-07,\n",
-              "        2.6568304e-07, 1.8642419e-05, 7.6893630e-05, 8.7281805e-06,\n",
-              "        9.4893331e-08, 2.0088930e-06],\n",
-              "       [4.7251220e-07, 7.7468193e-10, 1.2111890e-05, 6.2621432e-08,\n",
-              "        9.9782842e-01, 1.3673605e-07, 6.2079647e-07, 3.1194777e-05,\n",
-              "        5.1517814e-06, 2.1218385e-03]], dtype=float32)>"
-            ]
-          },
-          "metadata": {},
-          "execution_count": 27
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "[[1.2802366e-07 6.2025618e-10 8.8860397e-06 8.7612734e-06 2.3822172e-11\n",
+            "  7.6987384e-08 4.8728393e-14 9.9998188e-01 4.9781267e-08 1.5493698e-07]]\n"
+          ]
         }
       ],
       "source": [
-        "probability_model(x_test[:5])"
+        "# TODO range = :1 # :3\n",
+        "input = x_test[:1] # TODO range\n",
+        "probabilities = probability_model(input).numpy()\n",
+        "print(probabilities)"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 73,
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "pFet6Sueu6ah",
+        "outputId": "57f3939d-bbdb-40a5-b033-b122c3811743"
+      },
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "[7]\n"
+          ]
+        }
+      ],
+      "source": [
+        "test = y_test[:1] # TODO range\n",
+        "print(test)"
       ]
     },
     {
@@ -540,13 +575,16 @@
         "rX8mhOLljYeM"
       ],
       "name": "beginner.ipynb",
-      "toc_visible": true,
       "provenance": [],
-      "include_colab_link": true
+      "toc_visible": true
     },
     "kernelspec": {
       "display_name": "Python 3",
       "name": "python3"
+    },
+    "language_info": {
+      "name": "python",
+      "version": "3.9.10"
     }
   },
   "nbformat": 4,
