Add back output lost in previous commit.

--- a/beginner.ipynb
+++ b/beginner.ipynb
@@ -20,18 +20,18 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 14,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "0trJmd6DjqBZ",
-        "outputId": "4a33473e-5693-4471-f722-b1fe2aefab07"
+        "outputId": "89f91d5e-7d9b-4aa3-cfbd-8a6a71feff14"
       },
       "outputs": [
         {
-          "name": "stdout",
           "output_type": "stream",
+          "name": "stdout",
           "text": [
             "TensorFlow version: 2.8.0\n"
           ]
@@ -57,18 +57,18 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 15,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "7FP5258xjs-v",
-        "outputId": "cc54ab08-76a5-4846-b7af-c08aeda35db4"
+        "outputId": "15f9185a-6e90-4324-d3c3-948ea65e09ee"
       },
       "outputs": [
         {
-          "name": "stdout",
           "output_type": "stream",
+          "name": "stdout",
           "text": [
             "Shapes: x_train (60000, 28, 28) ; y_train (60000,) ; x_test (10000, 28, 28) ;  (10000,) \n",
             "\n",
@@ -110,7 +110,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 16,
       "metadata": {
         "id": "h3IKyzTCDNGo"
       },
@@ -135,21 +135,21 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 17,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "OeOrNdnkEEcR",
-        "outputId": "e6ccfc44-8c78-4119-8528-fe84404110c2"
+        "outputId": "c8fabf71-8f64-43e2-b1bc-0966eef47c0b"
       },
       "outputs": [
         {
-          "name": "stdout",
           "output_type": "stream",
+          "name": "stdout",
           "text": [
-            "[[ 1.223042   -0.15541793 -0.01329105 -0.394733   -0.7688958  -0.89843255\n",
-            "  -0.52713424 -0.26359808 -0.3087973  -0.12512541]]\n"
+            "[[-0.67643166  0.7261473  -0.02020825 -0.09915751  0.29011926 -0.28185853\n",
+            "   0.14484969  0.45289686 -0.11767417 -1.115447  ]]\n"
           ]
         }
       ],
@@ -169,39 +169,30 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 18,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "zWSRnQ0WI5eq",
-        "outputId": "227cdc13-cd1e-42b6-948f-802eb9680764"
+        "outputId": "9a8bf89b-e8bb-4b20-c29b-9d43b892eeda"
       },
       "outputs": [
         {
+          "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "array([[0.34809652, 0.08770859, 0.1011037 , 0.0690413 , 0.04749108,\n",
-              "        0.04172103, 0.06047945, 0.07871547, 0.0752368 , 0.09040616]],\n",
+              "array([[0.04843291, 0.1969123 , 0.0933544 , 0.08626756, 0.12732342,\n",
+              "        0.07186236, 0.1101079 , 0.149831  , 0.08468487, 0.03122328]],\n",
               "      dtype=float32)"
             ]
           },
-          "execution_count": 62,
           "metadata": {},
-          "output_type": "execute_result"
+          "execution_count": 18
         }
       ],
       "source": [
         "tf.nn.softmax(predictions).numpy()"
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "he5u_okAYS4a"
-      },
-      "source": [
-        "Note: It is possible to bake the `tf.nn.softmax` function into the activation function for the last layer of the network. While this can make the model output more directly interpretable, this approach is discouraged as it's impossible to provide an exact and numerically stable loss calculation for all models when using a softmax output. "
       ]
     },
     {
@@ -215,7 +206,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 19,
       "metadata": {
         "id": "RSkzdv8MD0tT"
       },
@@ -237,24 +228,24 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 20,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "NJWqEVrrJ7ZB",
-        "outputId": "0f2e71df-a061-4438-c531-c047e85467db"
+        "outputId": "e8a6912e-0f9e-465a-fde3-dab3a06c9019"
       },
       "outputs": [
         {
+          "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "3.1767502"
+              "2.6330028"
             ]
           },
-          "execution_count": 64,
           "metadata": {},
-          "output_type": "execute_result"
+          "execution_count": 20
         }
       ],
       "source": [
@@ -272,7 +263,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 21,
       "metadata": {
         "id": "9foNKHzTD2Vo"
       },
@@ -296,40 +287,40 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 22,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "y7suUbJXVLqP",
-        "outputId": "86934ef6-57de-4739-f42d-53346f0773ba"
+        "outputId": "61da5c6a-473e-4b00-cef6-eccc50b0b116"
       },
       "outputs": [
         {
-          "name": "stdout",
           "output_type": "stream",
+          "name": "stdout",
           "text": [
             "Epoch 1/5\n",
-            "1875/1875 [==============================] - 5s 2ms/step - loss: 0.2904 - accuracy: 0.9158\n",
+            "1875/1875 [==============================] - 5s 3ms/step - loss: 0.2949 - accuracy: 0.9132\n",
             "Epoch 2/5\n",
-            "1875/1875 [==============================] - 4s 2ms/step - loss: 0.1407 - accuracy: 0.9586\n",
+            "1875/1875 [==============================] - 5s 3ms/step - loss: 0.1406 - accuracy: 0.9581\n",
             "Epoch 3/5\n",
-            "1875/1875 [==============================] - 4s 2ms/step - loss: 0.1045 - accuracy: 0.9685\n",
+            "1875/1875 [==============================] - 5s 3ms/step - loss: 0.1049 - accuracy: 0.9678\n",
             "Epoch 4/5\n",
-            "1875/1875 [==============================] - 4s 2ms/step - loss: 0.0865 - accuracy: 0.9735\n",
+            "1875/1875 [==============================] - 5s 3ms/step - loss: 0.0864 - accuracy: 0.9731\n",
             "Epoch 5/5\n",
-            "1875/1875 [==============================] - 4s 2ms/step - loss: 0.0737 - accuracy: 0.9772\n"
+            "1875/1875 [==============================] - 5s 3ms/step - loss: 0.0733 - accuracy: 0.9766\n"
           ]
         },
         {
+          "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "<keras.callbacks.History at 0x7f0eabf81610>"
+              "<keras.callbacks.History at 0x7f8de2157350>"
             ]
           },
-          "execution_count": 52,
           "metadata": {},
-          "output_type": "execute_result"
+          "execution_count": 22
         }
       ],
       "source": [
@@ -347,31 +338,31 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 23,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "F7dTAzgHDUh7",
-        "outputId": "16ed2e87-6cff-4dce-f018-bb52d5bee2aa"
+        "outputId": "949bf752-34da-4caf-e593-c47b93d454b5"
       },
       "outputs": [
         {
-          "name": "stdout",
           "output_type": "stream",
+          "name": "stdout",
           "text": [
-            "313/313 - 0s - loss: 0.0827 - accuracy: 0.9750 - 472ms/epoch - 2ms/step\n"
+            "313/313 - 1s - loss: 0.0780 - accuracy: 0.9762 - 571ms/epoch - 2ms/step\n"
           ]
         },
         {
+          "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "[0.08272068202495575, 0.9750000238418579]"
+              "[0.07804422080516815, 0.9761999845504761]"
             ]
           },
-          "execution_count": 53,
           "metadata": {},
-          "output_type": "execute_result"
+          "execution_count": 23
         }
       ],
       "source": [
@@ -398,7 +389,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 24,
       "metadata": {
         "id": "rYb6DrEH0GMv"
       },
@@ -412,21 +403,21 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 25,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "cnqOZtUp1YR_",
-        "outputId": "fb6a6bae-7746-4dff-99f9-bfdcc0c21f52"
+        "outputId": "37f32168-92f6-406d-83a3-2c93e8531b57"
       },
       "outputs": [
         {
-          "name": "stdout",
           "output_type": "stream",
+          "name": "stdout",
           "text": [
-            "[[1.2802366e-07 6.2025618e-10 8.8860397e-06 8.7612734e-06 2.3822172e-11\n",
-            "  7.6987384e-08 4.8728393e-14 9.9998188e-01 4.9781267e-08 1.5493698e-07]]\n"
+            "[[2.8533602e-08 1.6426807e-08 1.6673229e-06 1.7092911e-03 6.5192615e-11\n",
+            "  3.1124358e-08 1.4276659e-14 9.9828428e-01 2.8498466e-08 4.7811732e-06]]\n"
           ]
         }
       ],
@@ -439,18 +430,18 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 26,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "pFet6Sueu6ah",
-        "outputId": "57f3939d-bbdb-40a5-b033-b122c3811743"
+        "outputId": "96403b95-7e62-4cda-cdd8-20ca465422d2"
       },
       "outputs": [
         {
-          "name": "stdout",
           "output_type": "stream",
+          "name": "stdout",
           "text": [
             "[7]\n"
           ]
